@@ -15,6 +15,49 @@ use Carp;
 $SCHEMA_VERSION = $VERSION*100;
 
 my $create_sql = {
+    8 => {
+        schema_info => [ qq|
+CREATE TABLE schema_info (
+  version   integer      NOT NULL default 0
+);
+|, qq|
+INSERT INTO schema_info VALUES (8)
+| ],
+        node => [ qq|
+CREATE TABLE node (
+  id        integer      NOT NULL PRIMARY KEY AUTOINCREMENT,
+  name      varchar(200) NOT NULL DEFAULT '',
+  version   integer      NOT NULL default 0,
+  text      mediumtext   NOT NULL default '',
+  modified  datetime     default NULL
+)
+| ],
+        content => [ qq|
+CREATE TABLE content (
+  node_id   integer      NOT NULL,
+  version   integer      NOT NULL default 0,
+  text      mediumtext   NOT NULL default '',
+  modified  datetime     default NULL,
+  comment   mediumtext   NOT NULL default '',
+  PRIMARY KEY (node_id, version)
+)
+| ],
+        internal_links => [ qq|
+CREATE TABLE internal_links (
+  link_from varchar(200) NOT NULL default '',
+  link_to   varchar(200) NOT NULL default '',
+  PRIMARY KEY (link_from, link_to)
+)
+| ],
+        metadata => [ qq|
+CREATE TABLE metadata (
+  node_id        integer      NOT NULL,
+  version        integer      NOT NULL default 0,
+  metadata_type  varchar(200) NOT NULL DEFAULT '',
+  metadata_value mediumtext   NOT NULL DEFAULT ''
+)
+| ]
+    },
     9 => {
         schema_info => [ qq|
 CREATE TABLE schema_info (
@@ -111,8 +154,11 @@ sub setup {
     my $disconnect_required = _disconnect_required( @args );
     my $wanted_schema = _get_wanted_schema( @args ) || $SCHEMA_VERSION;
 
+    die "No schema information for requested schema version $wanted_schema\n"
+            unless $create_sql->{$wanted_schema};
+
     # Check whether tables exist, set them up if not.
-    my %tables = fetch_tables_listing($dbh);
+    my %tables = fetch_tables_listing($dbh, $wanted_schema);
 
     # Do we need to upgrade the schema?
     # (Don't check if no tables currently exist)
@@ -130,16 +176,16 @@ sub setup {
         cleardb($dbh);
 
         # Grab new list of tables
-        %tables = fetch_tables_listing($dbh);
+        %tables = fetch_tables_listing($dbh, $wanted_schema);
     }
 
     # Set up tables if not found
-    foreach my $required ( keys %{$create_sql->{$SCHEMA_VERSION}} ) {
+    foreach my $required ( keys %{$create_sql->{$wanted_schema}} ) {
         if ( $tables{$required} ) {
             print "Table $required already exists... skipping...\n";
         } else {
             print "Creating table $required... done\n";
-            foreach my $sql (@{$create_sql->{$SCHEMA_VERSION}->{$required}} ) {
+            foreach my $sql (@{$create_sql->{$wanted_schema}->{$required}} ) {
                 $dbh->do($sql) or croak $dbh->errstr;
             }
         }
@@ -157,11 +203,12 @@ sub setup {
 # Internal method - what tables are defined?
 sub fetch_tables_listing {
     my $dbh = shift;
+    my $wanted_schema = shift;
 
     # Check whether tables exist, set them up if not.
     my $sql = "SELECT name FROM sqlite_master
                WHERE type='table' AND name in ("
-            . join( ",", map { $dbh->quote($_) } keys %{$create_sql->{$SCHEMA_VERSION}} ) . ")";
+            . join( ",", map { $dbh->quote($_) } keys %{$create_sql->{$wanted_schema}} ) . ")";
     my $sth = $dbh->prepare($sql) or croak $dbh->errstr;
     $sth->execute;
     my %tables;
@@ -244,9 +291,6 @@ sub _get_wanted_schema {
         my %args = %{$_[0]};
         return $args{wanted_schema};
     }
-
-    # Args passed as list of connection details.
-    return $_[1];
 }
 
 sub _disconnect_required {
